feat(material): retire legacy codes and align transfer categories